selfhost/test/typechecker/invocation/error_invalid_ident_kind.out
Error at %FILE_NAME%:1:1
Cannot invoke target as function
  |  None()
     ^
Type '<unknown>?' is not callable
